  - New custom macros and environments.
  - Simpler LaTeX encoding, e.g. "\%" instead of "{\%}".
  - Local tocs with `minitoc` (if 'use-latex-toc' is True).
  - Use default font in admonitions and sidebar.
  - Align of image in a figure defaults to 'center'.
  - Bugfix: Newlines around targets and references prevent run-together
    paragraphs.
  - Fix internal hyperlinks.


Release 0.5 (2008-06-25)
========================

* docutils/languages/he.py: Added to project: Hebrew mappings by
  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be
    UTF-8-encoded.
  - Paths of applied configuration files are now recorded in the
    runtime setting ``_config_files`` (accessible via
    ``--dump-settings``).
  - Added ``--strip-elements-with-class`` and ``--strip-class``
    options (``strip_elements_with_classes`` and ``strip_classes``
    settings).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Allow ``+`` and ``:`` in reference names.
  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.
  - Added support for multiple attributions in a physical block quote
    (indented text block), dividing it into multiple logical block
    quotes.
  - Added support for unicode bullets in bullet lists: "•", "‣", and
    "⁃".
  - Added support for new object-oriented directive interface,
    retaining compatibility to the old functional interface.
  - Added support for throwing ``DirectiveError``'s from within
    directive code.

* docutils/parsers/rst/__init__.py:

  - Added ``Directive`` base class.