@@ -4,7 +4,7 @@
 % 
 % :Author:    Guenter Milde
 % :Contact:   milde@users.berlios.de
-% :Revision:  $Revision: 5969 $
+% :Revision:  $Revision: 5981 $
 % :Date:      $Date: 2009-02-24$
 % :Copyright: © 2009 G. Milde,
 %             Released  without warranties or conditions of any kind
@@ -279,9 +279,6 @@
 % 
 % New features:
 %   * Margins are configurable via the ``DIV=...`` document option.
-% 
-%   * It is possible to disable the use of the `typearea` package by not
-%     including the ``DIV`` setting in the ``--documentoptions``.
 % 
 %   * The ``\raggedbottom`` setting is no longer inserted into the document. It
 %     is the default for article and report classes. If requested in combination
