@@ -1,12 +1,11 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
-\documentclass[a4paper,DIV=12,english]{article}
+\documentclass[a4paper,english]{article}
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
 \usepackage{fixltx2e} % fix LaTeX2e shortcomings
 \usepackage{tabularx}
-\usepackage{typearea}
 % provide a length variable and set it
 \newcommand*{\DUprovidelength}[2]{
   \ifthenelse{\isundefined{#1}}{\newlength{#1}\setlength{#1}{#2}}{}
