@@ -1,11 +1,10 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
-\documentclass[a4paper,DIV=12,english]{article}
+\documentclass[a4paper,english]{article}
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
 \usepackage{ifthen}
 \usepackage{fixltx2e} % fix LaTeX2e shortcomings
-\usepackage{typearea}
 
 %%% User specified packages and stylesheets
 \makeatletter
